# backend-api

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.api  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: action.yml  deploy_dev.yml  deploy_prod.yml  migrate.yml
api/: __main__.py
api/configs/: __init__.py  fastapi.py  get_settings.py  postgres.py
api/endpoints/: admin.py  auth.py  colors.py  events.py  unions.py  users.py
api/exceptions/: common.py
api/schemas/: auth.py  colors.py  common.py  events.py  unions.py  users.py
api/services/: auth.py  events.py  unions.py  users.py
api/utils/: authentication.py  formatter.py  logger.py
database/: env.py  settings.py
database/models/: __init__.py  channels.py  credentials.py  events.py  favourites.py  subscribed.py  unions.py  users.py
database/versions/: 2023-01-14-28b2af9e8819_.py  2023-01-14-4478c045b868_.py  2023-01-14-c494274d446e_.py  2023-01-15-73a0a62a3583_.py  2023-01-18-28abbf03eaee_.py  2023-01-19-5a844842cc3b_.py  2023-01-19-6e0c726108f6_.py  2023-01-19-ed0b3c8f1336_.py  2023-01-19-ef1ad45732fa_.py  2023-01-21-01f452b544ab_.py  2023-01-21-63f9005b99d6_.py  2023-01-21-eb99eaff62b3_.py  2023-01-24-193dc7674ad6_.py  2023-01-26-e0eb44523cb3_.py  2023-01-28-9a368348329f_.py
migrator/connection/: session.py
migrator/models/: base.py  likes.py  participations.py
migrator/versions/: 2023-01-14-28b2af9e8819_.py  2023-01-14-4478c045b868_.py  2023-01-14-c494274d446e_.py  2023-01-15-73a0a62a3583_.py  2023-01-18-28abbf03eaee_.py  2023-01-19-5a844842cc3b_.py  (+5 more)
