[tool.poetry]
name = "backend-client-api"
version = "0.1.0"
description = ""
authors = ["huscker <egostalker03@mail.ru>"]
readme = "README.md"
packages = [{include = "backend_client_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
python-jose = "^3.3.0"
asyncpg = "^0.27.0"
psycopg2 = "^2.9.5"
sqlalchemy = "^1.4.46"
aiologger = "^0.7.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
