[tool.poetry]
name = "backend-client-api"
version = "0.1.0"
description = ""
authors = ["huscker <egostalker03@mail.ru>"]
readme = "README.md"
packages = [{include = "backend_client_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
python-jose = "^3.3.0"
asyncpg = "^0.27.0"
sqlalchemy = {extras = ["asyncio"], version = "^1.4.46"}
aiologger = "^0.7.0"
passlib = "^1.7.4"
pytz = "^2022.7"
python-multipart = "^0.0.5"
alembic = "^1.9.1"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
